[package]
name = "srv"
version = "0.1.1"
authors = ["Keli <root@keli.im>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
tera = {  version = "1", default-features = false }
clap = "3.0.0-beta.1"
